[package]
name = "blake2f-circuit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
arrayvec = "0.7.0"
bitvec = "1"
ff = "0.13"
group = "0.13"
ethers-core = "^1.0.0"
halo2_proofs = { version = "0.3.0", default-features = false }
lazy_static = "1"
pasta_curves = "0.5"
proptest = { version = "1.0.0", optional = true }
rand = "0.8"
subtle = "2.3"
uint = "0.9.2" # MSRV 1.56.1
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.3.2" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

# Developer tooling dependencies
plotters = { version = "0.3.0", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.3"
proptest = "1.0.0"

[target.'cfg(unix)'.dev-dependencies]
inferno = ">=0.11, <0.11.5" # MSRV 1.59
pprof = { version = "0.8", features = ["criterion", "flamegraph"] } # MSRV 1.56



[features]
test-dev-graph = [
    "halo2_proofs/dev-graph",
]
test-dependencies = ["proptest"]

# In-development features
# See https://zcash.github.io/halo2/dev/features.html
beta = [
    "halo2_proofs/beta",
]
nightly = [
    "beta",
    "halo2_proofs/nightly",
    "unstable-sha256-gadget",
]
unstable-sha256-gadget = []
# Add flags for in-development features above this line.

[[bench]]
name = "primitives"
harness = false

[lib]
bench = false

[[bench]]
name = "blake2f"
harness = false
